# simba

./: .gitignore  README.md  call_from_matlab.py  example.ipynb  pyproject.toml
mat/: SIMBaOptions.m  find_x0.m  init_simba.m  run_baselines.m  run_simba.m  run_structure.m  simba.m
mat/data/: daisy.mat
simba/: functions.py  model.py  parameters.py  util.py
