[tool.poetry]
name = "simbapy"
version = "0.3.0"
description = "System identification Methods leveraging Backpropagation"
authors = ["Loris Di Natale <loris.dinatale@netplus.ch>"]
readme = "README.md"
packages = [{ include = "simba" }, { include = "mat" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=2.2.2,<3.0.0"
torch = ">=2.6.0,<3.0.0"
scipy = ">=1.15.1,<2.0.0"
matlabengine = "==24.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
